--- a/static/recipes/css/style.css
+++ b/static/recipes/css/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:ital,wght@0,300;1,100&display=swap');
+
 body{
-    background-color: gray;
+    font-family: 'roboto';
+    background-color: rgb(226, 226, 226);
     margin: 0px;
     padding:0px;
 }
@@ -12,26 +15,122 @@ h1{
     font-size: 40px;
     line-height: 0px  ;
 }
-
+a{
+    text-decoration: none;
+    color: black;
+}
 ul{
     margin:0px auto;
 }
 
-form{
-    margin:20px auto;
+
+main{
+    margin: 0 auto;
+}
+img{
+    width:100%;
 }
 
-input[type="text"] {
-    padding: 8px;
-    width: 40vw;
-    border-radius: 6px;
-    border-style: none;
+
+.search-form{
+    padding:5px;
+    position: relative;
+    max-width:30rem;
+    margin: 20px auto;
+    border-style: solid;
+    border-color: black;
+    transition: all 300ms ease-in-out;
 }
-input[type="submit"]{
-    padding: 6px;
+.search-form:focus-within{
+    border-color: orange;
+    color: orange;
+}
+.search-form:focus-within .search-button{
+    color: orange;
+}
+.search-input,
+.search-button{ 
+    transition: all 300ms ease-in-out;
+    border: none;
+    outline: none;
+    background-color: rgb(226, 226, 226);   
+}
+.search-input{
+    width:100%;
+    padding-right: 10px;
+}
+.search-button{
+    position:absolute;
+    right: 0;
+}
+.card{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    background-color: white;
+    height: 35rem;
+    width: 360px;
+    transform: scale(1);
+    transition: all 150ms ease-in-out;
+    box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.2)
+}
+.card:hover{
+    transform: scale(1.03)
+}
+
+.card-container{
+    padding: 40px;
+    justify-items:center;
+}
+.card-list-container{
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+    gap: 50px;
+}
+.card-title{
+    padding:10px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.card-meta-info{
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+
+}
+.card-meta-info span{
+    padding: 5px;
+}
+.card-desc{
+    padding: 0px 20px;
+    text-align: start;
+}
+.card-info{
+    display:flex;
+    padding: 30px;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.card-info-item{
+    line-height:5px;
+}
+.card-detail h3{
     background-color: black;
     color: white;
+    width: 100%;
+    text-align: center;
+    margin: 0px;
+    padding: 10px 0px;
 }
-.form-container{
-    display: flex;
+.card-detail h3:hover{
+    background-color: rgba(0, 0, 0, 0.9);
+}
+footer{
+    display:flex;
+    justify-content: space-around;
+    background-color:black;
+    padding:20px;
+    color:white;
 }
