--- a/templates/recipes/navbar.html
+++ b/templates/recipes/navbar.html
@@ -1,5 +1,7 @@
 <nav>
     <ul>
-        <h1>Recipes</h1>
+        <a href="{% url 'recipe:home' %}">
+            <h1>Recipes</h1>
+        </a>
     </ul>
 </nav>
