--- a/templates/recipes/recipe_list.html
+++ b/templates/recipes/recipe_list.html
@@ -7,7 +7,7 @@
         {% for recipe in recipes %}
                 <div class="card card-list">
                     <div>
-                        <a href="{% url 'recipe:recipes' recipe.id %}"><img src="{{recipe.cover.url}}" alt=""></a>
+                        <a href="{% url 'recipe:recipe' recipe.id %}"><img src="{{recipe.cover.url}}" alt=""></a>
                     </div>
                     <div class="card-title">
                         <h2>{{recipe.title}}</h2>
