Creating factories and testing views and urls

--- a/templates/recipes/recipe_list.html
+++ b/templates/recipes/recipe_list.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <div class="card-see-more">
-                        <a href="{% url 'recipe:recipes' recipe.id %}">
+                        <a href="{% url 'recipe:recipe' recipe.id %}">
                             <h3>See more...</h3>
                         </a>
                     </div>
