--- a/templates/recipes/search.html
+++ b/templates/recipes/search.html
@@ -1,36 +1,5 @@
-{% load static %}
+{% extends 'recipes/base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="{% static 'recipes/css/style.css' %}">
-    <title>{% block Title %}{% endblock Title %}</title>
-</head>
-<header>
-    {% include "recipes/navbar.html" %}
-    <form action="{% url 'recipe:search' %}" method="GET" class="search-form">
-        <input type="search" class="search-input" name="search" value="{{search}}">
-        <button type="submit" class="search-button"><i class="fas fa-search"></i></i></button>
-    </form>
-</header>
-
-<body>
-    <main>
-        {% block content %}
-        
-        {% endblock content %}
-    </main>
-    <footer>
-        <span>Powered by Django</span>
-        <span>By Kaique</span>
-    </footer>
-</body>
-
-</html>
+{% block content %}
+    {% include "recipes/card.html" %}
+{% endblock content %}
