--- a/templates/recipes/card.html
+++ b/templates/recipes/card.html
@@ -10,7 +10,9 @@
                 <div class="card-meta-info">
                     <span><i class="fas fa-user"></i> {{recipe.author.username}}
                     <span><i class="far fa-calendar-alt"></i> {{recipe.created_at|date:"d/m/Y"}}</span>
+                    {% if recipe.category is not None %}
                     <a href="{% url 'recipe:category' recipe.category.id %}"><span><i class="fas fa-pizza-slice"></i> <strong>{{recipe.category.name}}</strong></span></a>
+                    {% endif %}
                 </div>
                 <div class="card-desc">{{recipe.description}}</div>
                 <div class="card-info">
