--- a/templates/recipes/navbar.html
+++ b/templates/recipes/navbar.html
@@ -1,14 +1,22 @@
 <nav>
-    <ul>
-        <h1>{{request.user.username}}</h1>
-        <a href="{% url 'recipe:home' %}">
-            <h1>Recipes</h1>
-        </a>
-        <form action="{% url "author:logout" %}" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="username" value="{{request.user.username}}">
-            <button type="submit" >Click here.</button>
-
-        </form>
+    <ul class="navbar-container"  >
+        <li>
+            <a href="{% url 'recipe:home' %}">
+                <h1>Recipes</h1>
+            </a>
+        </li>
+        <li>
+            <a href="{% url "author:dashboard" %}"><h1>{{request.user.username}}</h1></a>
+        </li>
+        <li>
+            <form action="{% url "author:logout" %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="username" value="{{request.user.username}}">
+                {% if user.is_authenticated %}
+                    <button class="logout-btn" type="submit" >Logout</button>
+                {% endif %}
+    
+            </form>
+        </li>
     </ul>
 </nav>
