Adding dependencies to requirements.txt

--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -16,10 +16,9 @@
 </head>
 <header>
     {% include "recipes/navbar.html" %}
-    <form action="{% url 'recipe:search' %}" method="GET" class="search-form">
-        <input type="search" class="search-input" name="search" value="{{search}}" placeholder="Search for a recipe">
-        <button type="submit" class="search-button"><i class="fas fa-search"></i></i></button>
-    </form>
+    {% if user.is_authenticated %}
+        {% include "recipes/search-bar.html" %}
+    {% endif %}
 </header>
 
 <body>
@@ -55,10 +54,7 @@
                  
         </div>
     </main>
-    <footer>
-        <span>Powered by Django</span>
-        <span>By Kaique</span>
-    </footer>
+    {% include "recipes/footer.html" %}
 </body>
 
 </html>
