--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -6,25 +6,27 @@
  
 <div class="container">
     <div class="form-container">
-            <div><H1>Login</H1></div>
-            <div>
-                <form action="{% url 'author:login-validation' %}" method="POST">
-                    {% csrf_token %}
-                        {% for field in form %}
-                            <div class="form-field">
-                                <label for="{{field.id_for_label}}">{{field.label}}</label>
-                                {{field}}
-                                {% if field.help_text %}
-                                <p class="help-text">{{field.help_text}}</p>
-                                {% endif %}
-                                {{field.errors}}
-                                </div>
-                            <div class="form-field">
-                        {% endfor %}
-                    </div>
-                    <button action="submit" >Send</button>
-                    </div>
-                </form>
+            <div class="login-form" >
+                <div><H1>Login</H1></div>
+                <div>
+                    <form action="{% url 'author:login-validation' %}" method="POST">
+                        {% csrf_token %}
+                            {% for field in form %}
+                                <div class="form-field">
+                                    <label for="{{field.id_for_label}}">{{field.label}}</label>
+                                    {{field}}
+                                    {% if field.help_text %}
+                                    <p class="help-text">{{field.help_text}}</p>
+                                    {% endif %}
+                                    {{field.errors}}
+                                    </div>
+                                <div class="form-field">
+                            {% endfor %}
+                        </div>
+                        <button action="submit" >Send</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
       </div>
