--- a/static/recipes/css/style.css
+++ b/static/recipes/css/style.css
@@ -221,7 +221,7 @@ footer{
 }
 
 .message{
-    margin:auto;
+    margin:10px auto;
     width:50vw;
     border:solid;
     display:flex;
@@ -240,10 +240,15 @@ footer{
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    align-content: center;
+    justify-content: center;
     width: 40vw;
     align-items: center;
     margin: auto;
+}
+.login-form{
+    height:80vh;
+    padding: 50px;
+
 }
 .form-field{
     display: grid;
@@ -257,12 +262,12 @@ label{
 }
 .form-field input{ 
     border-radius: 3px;
-    padding: 5px;
+    padding: 12px;
     border:none;
 }
 .form-field button{
     border-radius: 3px;
-    padding: 5px;
+    padding: 12px;
     border:none;
     background-color: black;
     color: white;
