--- a/authors/templates/authors/pages/edit_recipe.html
+++ b/authors/templates/authors/pages/edit_recipe.html
@@ -27,7 +27,7 @@
                             <div class=af"form-field">
                         {% endfor %}
                     </div>
-                    <button action="submit" >Send</button>
+                    <button class="create-rcp-btn" action="submit" >Send</button>
                     </div>
                 </form>
             </div>
