--- a/templates/recipes/recipe_list.html
+++ b/templates/recipes/recipe_list.html
@@ -3,5 +3,8 @@
 {% block Title %}{{title}}{% endblock Title %}
 
 {% block content %}
+    {% if user.is_authenticated %}
+    {% include "recipes/search-bar.html" %}
+    {% endif %}
     {% include "recipes/card.html" %}
 {% endblock content %}
