--- a/templates/recipes/search.html
+++ b/templates/recipes/search.html
@@ -1,5 +1,8 @@
 {% extends 'recipes/base.html' %}
 
 {% block content %}
+    {% if user.is_authenticated %}
+    {% include "recipes/search-bar.html" %}
+    {% endif %}
     {% include "recipes/card.html" %}
 {% endblock content %}
