Styling recipe cards in authors dashboard

--- a/templates/recipes/card.html
+++ b/templates/recipes/card.html
@@ -33,7 +33,7 @@
             </div>  
             {% empty %}
             <div class="empty-card-info">
-                <h1>Não há receitas pra serem exibidas.</h1>
+                <h1>There are no recipes to show</h1>
             </div>
             {% endfor %}
         </div>
