--- a/authors/templates/authors/pages/dashboard.html
+++ b/authors/templates/authors/pages/dashboard.html
@@ -6,18 +6,18 @@
  
     <div class="author-dashboard">
         <h1 class="dashboard-title" >Dashboard {{user}}</h1>
-        <p><a href="{% url "author:create_recipe" %}">Create a recipe</a></p>
+        <p><a href="{% url "author:create_recipe" %}"><strong>Create a recipe</strong></a></p>
         <ul>
             {% for recipe in recipes %}
-                <li><a href="{% url "author:edit_recipe" recipe.id %}">{{recipe.title}}</a>
+                <div class="recipe-dashbord"><img width="100px" id="img-dsb-recipe" src="{{recipe.cover.url}}" alt=""><a href="{% url "author:edit_recipe" recipe.id %}">{{recipe.title}}</a>
                 <form id="form-delete"  action="{% url "author:dashboard_recipe_delete" recipe.id %}" method="POST">
                         {% csrf_token %}
-                    <button type="submit" ><strong>X</strong></button>
+                    <button id="dsb-btn" type="submit" ><strong>x</strong></button>
                 </form>
                 
-                </li>
+            </div>
             {% empty %}
-                <h2>There's no recipe to be showed</h2>
+                <h2>There are no recipes to show</h2>
             {% endfor %}
         </ul>
     </div>
