--- a/static/recipes/css/style.css
+++ b/static/recipes/css/style.css
@@ -42,6 +42,46 @@ footer{
     padding:20px;
     color:white;
 }
+
+.recipe-dashbord{
+    padding:10px;
+    border-radius:10px;
+    position: relative;
+    margin: 10px;
+    display:flex;
+    flex-wrap:nowrap;
+    flex-direction:row;
+    align-items:center;
+    justify-content:space-around;
+    background-color:white;
+    width:40vw;
+    height:fit-content;
+    transition: all 150ms ease-in-out;
+}
+.recipe-dashbord:hover{
+    transform:scale(1.02);
+}
+
+#dsb-btn{
+    cursor:pointer; 
+    font-size:20px;
+    position:absolute;
+    right:0;
+    top:0;
+    border-radius: 3px;
+    padding: 10px 20px;
+    border:none;
+    background-color:transparent;
+    color:black;
+    transition: all ease-in-out 100ms;
+}
+#dsb-btn:hover{
+    transform:scale(1.1);
+}
+#img-dsb-recipe{
+    border-radius:10px;
+    width:25%;
+}
 .dashboard-title{
     margin: 50px 0px;
 }
@@ -61,7 +101,7 @@ footer{
 .navbar-container li{
     margin:0px 10px;
     list-style-type:none;
-    transform: 150ms ease-in-out;
+    transition:all 150ms ease-in-out;
 }
 .navbar-container li:hover{
     transform:scale(1.03)
@@ -81,7 +121,7 @@ footer{
     margin: 20px auto;
     border-style: solid;
     border-color: black;
-    transition: all 300ms ease-in-out;
+    transition: all 150ms ease-in-out;
 }
 .search-form:focus-within{
     border-color: orange;
@@ -92,7 +132,7 @@ footer{
 }
 .search-input,
 .search-button{ 
-    transition: all 300ms ease-in-out;
+    transition: all 150ms ease-in-out;
     border: none;
     outline: none;
     background-color: rgb(226, 226, 226);   
