--- a/authors/templates/authors/pages/dashboard.html
+++ b/authors/templates/authors/pages/dashboard.html
@@ -6,13 +6,13 @@
  
     <div class="author-dashboard">
         <h1 class="dashboard-title" >Dashboard {{user}}</h1>
-        <p><a href="{% url "author:create_recipe" %}"><strong>Create a recipe</strong></a></p>
+        <p><a href="{% url "author:create_recipe" %}"><button class="create-rcp-btn" ><strong>Create a recipe &#10010;</strong></button></a></p>
         <ul>
             {% for recipe in recipes %}
                 <div class="recipe-dashbord"><img width="100px" id="img-dsb-recipe" src="{{recipe.cover.url}}" alt=""><a href="{% url "author:edit_recipe" recipe.id %}">{{recipe.title}}</a>
                 <form id="form-delete"  action="{% url "author:dashboard_recipe_delete" recipe.id %}" method="POST">
                         {% csrf_token %}
-                    <button id="dsb-btn" type="submit" ><strong>x</strong></button>
+                    <button id="dsb-btn" type="submit" ><strong>&#10006;</strong></button>
                 </form>
                 
             </div>
