--- a/authors/templates/authors/pages/dashboard.html
+++ b/authors/templates/authors/pages/dashboard.html
@@ -4,22 +4,50 @@
 
 {% block content %}
  
+    <div class="dshb-title-div" >
+        <h1 class="dashboard-title" >Dashboard {{user|title}}</h1>
+    </div>
+    <p><a href="{% url "author:create_recipe" %}"><button class="create-rcp-btn" ><strong>Create a recipe &#10010;</strong></button></a></p>
     <div class="author-dashboard">
-        <h1 class="dashboard-title" >Dashboard {{user}}</h1>
-        <p><a href="{% url "author:create_recipe" %}"><button class="create-rcp-btn" ><strong>Create a recipe &#10010;</strong></button></a></p>
-        <ul>
+        <div>
             {% for recipe in recipes %}
-                <div class="recipe-dashbord"><img width="100px" id="img-dsb-recipe" src="{{recipe.cover.url}}" alt=""><a href="{% url "author:edit_recipe" recipe.id %}">{{recipe.title}}</a>
+            <div {% if recipe.is_published %} 
+                    class="recipe-dashbord recipe-published"
+                    {% else %}
+                    class="recipe-dashbord recipe-pending"
+                    {% endif %}
+                    ><img width="100px" id="img-dsb-recipe" src="{{recipe.cover.url}}" alt=""><a href="{% url "author:edit_recipe" recipe.id %}">{{recipe.title}}</a>
                 <form id="form-delete"  action="{% url "author:dashboard_recipe_delete" recipe.id %}" method="POST">
-                        {% csrf_token %}
+                    {% csrf_token %}
                     <button id="dsb-btn" type="submit" ><strong>&#10006;</strong></button>
                 </form>
                 
             </div>
             {% empty %}
-                <h2>There are no recipes to show</h2>
+            <h2>There are no recipes to show</h2>
             {% endfor %}
-        </ul>
+        </div>
+        <div class="dshb-statistics-container" >
+           <div>
+                <div class="dshb-statistics-div" >
+                    <strong>Recipes publisheds</strong>: 10
+                </div>
+                <div class="dshb-statistics-div" >
+                    <strong>Most categories publisheds:</strong> Cake 
+                </div>
+                <div class="dshb-statistics-div" >
+                    <strong>Pending recipes</strong>: 3
+                </div>
+           </div>
+            <div>
+                <div class="dshb-statistics-div" >
+                    <strong>Pending recipes</strong>: 3
+                </div>
+                <div class="dshb-statistics-div" >
+                    <strong>Last recipe published:<a href="#"></a></strong>
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock content %}
