--- a/authors/templates/authors/pages/dashboard.html
+++ b/authors/templates/authors/pages/dashboard.html
@@ -7,16 +7,11 @@
     <div class="dshb-title-div" >
         <h1 class="dashboard-title" >Dashboard {{user|title}}</h1>
     </div>
-    <p><a href="{% url "author:create_recipe" %}"><button class="create-rcp-btn" ><strong>Create a recipe &#10010;</strong></button></a></p>
+    <div><a href="{% url "author:create_recipe" %}"><button class="create-rcp-btn" ><strong>Create a recipe &#10010;</strong></button></a></div>
     <div class="author-dashboard">
-        <div>
+        <div class="rcp-list-div" >
             {% for recipe in recipes %}
-            <div {% if recipe.is_published %} 
-                    class="recipe-dashbord recipe-published"
-                    {% else %}
-                    class="recipe-dashbord recipe-pending"
-                    {% endif %}
-                    ><img width="100px" id="img-dsb-recipe" src="{{recipe.cover.url}}" alt=""><a href="{% url "author:edit_recipe" recipe.id %}">{{recipe.title}}</a>
+            <div class="recipe-dashbord"><img width="100px" id="img-dsb-recipe" src="{{recipe.cover.url}}" alt=""><a href="{% url "author:edit_recipe" recipe.id %}">{{recipe.title}}</a>
                 <form id="form-delete"  action="{% url "author:dashboard_recipe_delete" recipe.id %}" method="POST">
                     {% csrf_token %}
                     <button id="dsb-btn" type="submit" ><strong>&#10006;</strong></button>
@@ -30,21 +25,21 @@
         <div class="dshb-statistics-container" >
            <div>
                 <div class="dshb-statistics-div" >
-                    <strong>Recipes publisheds</strong>: 10
+                    <strong>Recipes publisheds:  </strong> {{info.is_published_rcp_length}}
                 </div>
                 <div class="dshb-statistics-div" >
                     <strong>Most categories publisheds:</strong> Cake 
                 </div>
                 <div class="dshb-statistics-div" >
-                    <strong>Pending recipes</strong>: 3
+                    <strong>Pending recipes:</strong>{{info.not_published_rcp_length}}
                 </div>
            </div>
             <div>
                 <div class="dshb-statistics-div" >
-                    <strong>Pending recipes</strong>: 3
+                    <strong>Last recipe created at:</strong>{{info.last_created_recipe.created_at|date:"d/m/Y"}}
                 </div>
                 <div class="dshb-statistics-div" >
-                    <strong>Last recipe published:<a href="#"></a></strong>
+                    <strong>Last recipe published: <a href="{% url "recipe:recipe" info.last_created_recipe.id %}">{{info.last_created_recipe.title|truncatechars:20}}</a></strong>
                 </div>
             </div>
         </div>
