--- a/static/recipes/css/style.css
+++ b/static/recipes/css/style.css
@@ -48,6 +48,10 @@ footer{
     padding:20px;
     color:white;
 }
+.card-div-tags{
+    text-align:center;
+    padding: 10px;
+}
 .div-btn-add-rcp{
     text-align:center;
     width: 90%;
