--- a/templates/recipes/card.html
+++ b/templates/recipes/card.html
@@ -25,6 +25,11 @@
                         <p>{{recipe.preparation_time}} {{recipe.preparation_time_unit}}</p>
                     </div>
                 </div>
+                <div class="card-div-tags" >
+                    {% for tag in recipe.tags.all %}
+                        <a href=""><strong>#{{tag.name}}</strong></a>
+                    {% endfor %}
+                </div>
                 <div class="card-see-more">
                     <a href="{% url 'recipe:recipe' recipe.id %}">
                         <h3>See more...</h3>
