--- a/static/recipes/css/style.css
+++ b/static/recipes/css/style.css
@@ -48,6 +48,66 @@ footer{
     padding:20px;
     color:white;
 }
+.menu-content{
+    width:80%;
+}
+.menu-hidden {
+    left: -255px;
+}
+.button-show-menu {
+    border:none;
+    background-color:gray;
+    padding: 15px;
+    border-radius:0px 5px 5px 0px;
+    position:fixed;
+    top:0;
+    left:255px;
+    visibility:hidden;
+    opacity:0;
+    z-index:4;
+}
+.button-show-menu-visible{
+    visibility:visible;
+    opacity:1;
+    top:5px;
+    left:5px;
+}
+.button-close-menu{
+    border-style:none;
+    background-color:rgba(255, 255, 255, 0);
+    position:absolute;
+    top:0;
+    right:0;
+    color:white;
+    z-index:3;
+}
+.menu-container{
+    position:fixed;
+    top:0;
+    bottom:0;
+    width:260px;
+    min-height:100vh;
+    background-color:gray;
+    transition:all 300ms ease-in-out;
+    overflow-y:auto;
+    z-index:2;
+}
+.hidden-text{
+    display:none;
+}
+.menu-nav{
+    width:100%;
+    flex-flow:row wrap;
+    padding:15px;
+    background-color: rgba(255, 255, 255, 0);
+    color:black;
+}
+.menu-nav a{
+    font-size:25px;
+    color:black;
+}
+
+
 .card-div-tags{
     text-align:center;
     padding: 10px;
